--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.1",
+    "styled-react-modal": "^3.1.0"
   }
 }
